--- a/src/components/Contacts.css
+++ b/src/components/Contacts.css
@@ -69,3 +69,32 @@
 #media a:hover {
   background-color: rgb(0, 204, 255);;
 }
+@media (max-width: 360px) {
+  .contacts p {
+    padding-top: .6rem;
+  }
+  .dflex {
+    gap: 1rem;
+    margin: 0.8rem;
+    padding: 0.5rem;
+  }
+  .dflex ul li {
+    margin: 8px 0;
+    font-size: 14px;
+  }
+  #myForm button {
+    width: 50%;
+  }
+  .media {
+    gap: 0.5rem;
+    margin: 0.78rem;
+    padding-bottom: 1rem;
+  }
+  #media a  {
+    margin: 2px;
+    padding:  15px;
+  }
+  #media a i {
+    font-size: 15px;
+  }
+}
