--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -3,8 +3,12 @@
   margin: 0;
   padding: 0;
 }
-.services h1 {
+.services h1:not(#head) {
   background-color: rgb(0, 204, 255);
+  font-size: 40px;
+  text-align: center;
+}
+#head {
   font-size: 40px;
   text-align: center;
 }
@@ -13,24 +17,14 @@ p {
   text-align: center;
 }
 .price {
-  display: flex;
   gap: 1.5rem;
-  justify-content: center;
-  align-items: center;
+  flex-wrap: wrap;
 }
 .service {
-  margin: 1rem;
-  padding: 0;
-  border: 1px solid rgb(0, 204, 255);
-}
-.service li {
-  list-style-type: none;
+  margin: 0.8rem;
 }
 .service h3, .service p:not(p:last-child), .service li {
-padding: 14px;
-text-align: center;
-border-bottom: 1px solid;
-margin: 0;
+padding: 10px;
 }
  .service p:hover, .service li:hover{
   box-shadow: 0 2px 4px 0 rgb(194, 193, 193);
@@ -53,6 +47,10 @@ margin: 0;
 }
 .reviews:hover {
   box-shadow: 0 2px 4px 0px rgb(0, 204, 255);
+  padding: 14px;
+  text-align: center;
+  border-bottom: 1px solid;
+  margin: 0;
 }
 .reviews img {
   width: 150px;
@@ -61,4 +59,53 @@ margin: 0;
 }
  p i {
   color: rgb(134, 134, 12);
+ }
+ @media (min-width:360px) and (max-width:600px) {
+  .services h1:not(#head) {
+    font-size: 24px;
+  }
+  #head {
+    font-size: 18px;
+  }
+  p {
+    font-size: large;
+  }
+  .price {
+    display: flex;
+    gap: 1rem;
+    justify-content: center;
+    align-items: center;
+  }
+  .service {
+    margin: 1rem;
+    padding: 0;
+    border: 1px solid rgb(0, 204, 255);
+  }
+  .service li {
+    list-style-type: none;
+  }
+  .service h3, .service p:not(p:last-child), .service li {
+  padding: 14px;
+  text-align: center;
+  border-bottom: 1px solid;
+  margin: 0;
+  }
+   .service p:hover, .service li:hover{
+    box-shadow: none;
+   } 
+  #reviews {
+    gap: .5rem;
+    flex-wrap: wrap;
+  }
+  .reviews {
+    /* display: flex;
+    gap: 1rem; */
+    margin: 0.5rem;
+    padding: 0.5rem;
+    width: 180px;
+  }
+  .reviews:hover {
+    box-shadow: none;
+  }
+
  }
