--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -9,6 +9,7 @@
   padding: 2rem;
   border: 2px solid rgb(25, 29, 29);
   border-radius: 4px;
+  box-shadow: 0 10px 12px 4px rgb(65, 166, 191);
 }
 .signUp h1, .signUp p {
   text-align: center;
@@ -33,9 +34,34 @@
   display: flex;
   gap: 1rem;
 }
-.signUp .dflex2:first-child {
+.signUp .dflex2 #bgGreen {
   background-color: green;
 }
-.signUp .dflex2:last-child {
-  background-color: rgb(163, 61, 61);
+.signUp .dflex2 #bgGreen:hover {
+  background-color: #29ea30;
+}
+.signUp .dflex2 #bgRed{
+  background-color: rgb(168, 65, 65);
+}
+.signUp .dflex2 #bgRed:hover{
+  background-color: rgb(222, 9, 9);
+}
+@media (min-width:360px) and (max-width:600px) {
+  .signUp {
+    background-color: rgb(0, 204, 255);
+    margin: 1rem 10%;
+    padding: 1rem;
+    border: 1px solid rgb(25, 29, 29);
+    border-radius: 4px;
+    box-shadow: none;
+  }
+
+  .signUp label {
+    font-size: 16px;
+    font-weight: bold;
+  }
+  .signUp .dflex2 {
+    display: block;
+    gap: 0.8rem;
+  }
 }
