--- a/src/components/Services.css
+++ b/src/components/Services.css
@@ -16,15 +16,30 @@ p {
   font-size: x-large;
   text-align: center;
 }
+.price .service #sign a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.7rem;
+  color: rgb(0, 136, 255);
+  text-decoration: none;
+}
 .price {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   gap: 1.5rem;
   flex-wrap: wrap;
 }
 .service {
   margin: 0.8rem;
+  border: 1px solid rgb(0, 204, 255);;
 }
 .service h3, .service p:not(p:last-child), .service li {
-padding: 10px;
+  padding: 10px;
+  margin: 0;
+  border-bottom: 1px solid;
+  list-style-type: none;
 }
  .service p:hover, .service li:hover{
   box-shadow: 0 2px 4px 0 rgb(194, 193, 193);
@@ -47,10 +62,6 @@ padding: 10px;
 }
 .reviews:hover {
   box-shadow: 0 2px 4px 0px rgb(0, 204, 255);
-  padding: 14px;
-  text-align: center;
-  border-bottom: 1px solid;
-  margin: 0;
 }
 .reviews img {
   width: 150px;
