--- a/src/components/SignUp.css
+++ b/src/components/SignUp.css
@@ -46,6 +46,11 @@
 .signUp .dflex2 #bgRed:hover{
   background-color: rgb(222, 9, 9);
 }
+.signUp p:last-child a {
+  text-decoration: none;
+  color: rgb(5, 74, 134);
+  font-size: 1.2rem;
+}
 @media (min-width:360px) and (max-width:600px) {
   .signUp {
     background-color: rgb(0, 204, 255);
